--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AudioPlayer b020924_1430</title>
-    <link rel="shortcut icon" href="developercat.png"/>
+    <link rel="shortcut icon" href="icon.png"/>
     <meta name="title" content="AudioPlayer">
     <meta name="description" content="Simple online audio player without ads">
     <meta name="keywords" content="audio player, audio, player">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="ivents.fun">
+    <meta name="author" content="LowPings69">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
