--- a/b150824_2222.html
+++ b/b150824_2222.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="ivents.fun">
+    <meta name="author" content="LowPings69">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet"/>
     <style>
